--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/xinyuchen98/iss_spotter#readme",
   "dependencies": {
     "quest": "^0.4.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9"
   }
 }
